--- a/src/features/cart/Cart.scss
+++ b/src/features/cart/Cart.scss
@@ -13,23 +13,20 @@
 
   .container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, 1fr); /* see notes below */
+    grid-template-columns: repeat(auto-fill, 1fr);
     gap: 20px;
     max-height: 100%;
     overflow-y: auto;
-    flex:1;
+    flex: 1;
     align-content: flex-start;
   }
-  
+
   .total {
     height: 80px;
     text-align: right;
   }
-  
+
   h2.empty {
     margin: auto;
   }
 }
-
-
-
